# See: https://setuptools.readthedocs.io/en/latest/setuptools.html
[metadata]
name = 'django-ipware'
author = 'Val Neekman'
author_email = 'info@neekware.com'
description = "A Django utility application that returns client's real IP address"
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un33k/django-ipware
download_url = https://github.com/un33k/django-ipware
project_urls = https://github.com/un33k/django-ipware
Bug Tracker = https://github.com/un33k/django-ipware/issues
classifiers = 
  'Development Status :: 5 - Production/Stable',
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Topic :: Utilities'


[options]
package_dir = ipware
packages = find:
python_requires = >=3.6
install_requires = 

[options.packages.find]
where = ipware
